# which-movie

./: README.md
backend/: .infisical.json  Dockerfile  main.py  makefile  pyproject.toml
backend/src/: comments.json  endpoints.py  services.py
extension/: .gitignore  globals.css  package.json  pnpm-lock.yaml  popup.tsx
extension/components/: alert-message.tsx  mode-toggle.tsx  valid-message.tsx
extension/components/magicui/: script-copy-btn.tsx
extension/lib/: constants.ts
