[tool.poetry]
name = "which-movie-api"
version = "0.1.0"
description = "Backend for which-movie extension"
authors = ["Subhranshu Pati <subhranshupati0412@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
