[tool.ruff]
select = ["E", "F", "I", "B", "C4", "ARG", "SIM", "PTH", "RUF"]
indent-width = 4
target-version = "py310"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
isort.combine-as-imports = true
isort.force-wrap-aliases = true
fixable = ["ALL"]
unfixable = []
ignore = ["E203", "E501"]
select = ["E", "F", "W", "Q", "I"]

[tool.poetry]
name = "which-movie-api"
version = "0.1.0"
description = "Backend for which-movie extension"
authors = ["Subhranshu Pati <subhranshupati0412@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
